# adVentureAI

./: Project_Description.md  requirements.txt
ai_ventures/: README.md  pyproject.toml
ai_ventures/src/ai_ventures/: crew.py  main.py
