[project]
name = "ai_ventures"
version = "0.1.0"
description = "AI-Ventures using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
ai_ventures = "ai_ventures.main:run"
run_crew = "ai_ventures.main:run"
train = "ai_ventures.main:train"
replay = "ai_ventures.main:replay"
test = "ai_ventures.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
